@@ -1,3 +1,7 @@
+2005-03-03  Richard Hult  <richard@imendio.com>
+
+	* sv.po: Update.
+
 2005-03-03  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
